# range_searcher

./: CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: ci_tests.yml  vcpkg-release.yml
examples/: CMakeLists.txt  basic_example.cpp  complex_example.cpp
include/beman/range_searcher/: CMakeLists.txt  searcher.hpp
infra/cmake/: gnu-toolchain.cmake
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/range_searcher/: CMakeLists.txt  basic.test.cpp
